--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -29,7 +29,11 @@
 
 % https://www.mdpi.com/2076-3417/13/6/3722
 
-\pitch{\pptQuote{michael-pradel.jpg}{Neural software analysis offers a fresh approach, enhancing or even surpassing traditional program analysis in some areas}{Michael Pradel and Satish Chandra \newline \ul{Neural Software Analysis}, \newline Communications of the ACM 65(1), 2022}}
+\qte
+  [Michael Pradel and Satish Chandra]
+  {michael-pradel.jpg}
+  {Neural software analysis offers a fresh approach, enhancing or even surpassing traditional program analysis in some areas}
+  {pradel2022}
 
 \plush{
   \pptBanner{Read this:}\par
