--- a/main.bib
+++ b/main.bib
@@ -1400,3 +1400,147 @@
   publisher={Institute of Electrical and Electronics Engineers (IEEE)},
   doi={10.1109/access.2023.3305249}
 }
+
+@article{elmendorf1969,
+  title={{Controlling the Functional Testing of an Operating System}},
+  author={Elmendorf,  William Robert},
+  journal={IEEE Transactions on Systems Science and Cybernetics},
+  year={1969},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/tssc.1969.300221}
+}
+
+@article{gelperin1988,
+  title={{The growth of software testing}},
+  author={Gelperin, D. and Hetzel, B.},
+  journal={Communications of the ACM},
+  year={1988},
+  publisher={Association for Computing Machinery (ACM)},
+  doi={10.1145/62959.62965}
+}
+
+@book{beizer1995,
+  title={{Black Box Testing}},
+  author={Beizer, Boris},
+  year={1995},
+  publisher={ACM Digital Library}
+}
+
+@inproceedings{marick1997,
+  title={{How to Misuse Code Coverage}},
+  author={Marick, Brian},
+  booktitle={Proceedings of the 16th Interational Conference on Testing Computer Software},
+  url={http://www.exampler.com/testing-com/writings/coverage.pdf},
+  year={1997}
+}
+
+@misc{fowler1997,
+  title={{Continuous Integration}},
+  author={Fowler, Martin},
+  year={1997},
+  url={https://martinfowler.com/bliki/TestCoverage.html}
+}
+
+@book{kaner2002,
+  title={{Lessons Learned in Software Testing: A Context-Driven Approach}},
+  author={Kaner, Cem and Bach, James and Pettichord, Bret},
+  year={2002},
+  publisher={Wiley}
+}
+
+@article{kochhar2017,
+  title={{Code Coverage and Postrelease Defects: A Large-Scale Study on Open Source Projects}},
+  author={Kochhar, Pavneet Singh and Lo, David and Lawall, Julia and Nagappan, Nachiappan},
+  journal={IEEE Transactions on Reliability},
+  year={2017},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/tr.2017.2727062}
+}
+
+@inproceedings{ivankovi2019,
+  title={{Code coverage at Google}},
+  author={Petrovi{\'c}, Goran and Ivankovi{\'c}, Marko and Just, Ren{\'e} and Fraser, Gordon},
+  booktitle={Proceedings of the 27th Joint Meeting on ESEC/FSE},
+  url={https://dl.acm.org/doi/abs/10.1145/3338906.3340459},
+  year={2019},
+  doi={10.1145/3338906.3340459}
+}
+
+@article{hamlet1997,
+  title={{Testing Programs with the Aid of a Compiler}},
+  author={Hamlet, Richard G.},
+  journal={IEEE Transactions on Software Engineering},
+  year={1997},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/tse.1977.231145}
+}
+
+@inproceedings{offutt1991,
+  title={{How strong is weak mutation?}},
+  author={Offutt, A. Jefferson and Lee, Stephen D.},
+  booktitle={Proceedings of the symposium on Testing,  analysis,  and verification},
+  url={http://dx.doi.org/10.1145/120807.120826},
+  year={1991},
+  doi={10.1145/120807.120826}
+}
+
+@inproceedings{andrews2005,
+  title={{Is mutation an appropriate tool for testing experiments?}},
+  author={Andrews, James H. and Briand, Lionel C. and Labiche, Y.},
+  booktitle={Proceedings of the 27th International Conference on Software Engineering (ICSE)},
+  url={https://dl.acm.org/doi/abs/10.1145/1062455.1062530},
+  year={2005},
+  doi={10.1145/1062455.1062530}
+}
+
+@inproceedings{ma2006,
+  title={{MuJava: a mutation system for java}},
+  author={Ma, Yu-Seung and Offutt, Jeff and Kwon, Yong-Rae},
+  booktitle={Proceedings of the 28th International Conference on Software Engineering (ICSE)},
+  url={https://dl.acm.org/doi/abs/10.1145/1134285.1134425},
+  year={2006},
+  doi={10.1145/1134285.1134425}
+}
+
+@book{ammann2008,
+  title={{Introduction to Software Testing}},
+  author={Ammann, Paul and Offutt, Jeff},
+  year={2008},
+  publisher={Cambridge University Press}
+}
+
+@article{jia2009,
+  title={{Higher Order Mutation Testing}},
+  author={Jia, Yue and Harman, Mark},
+  journal={Information and Software Technology},
+  year={2009},
+  publisher={Elsevier BV},
+  doi={10.1016/j.infsof.2009.04.016}
+}
+
+@article{jia2010,
+  title={{An Analysis and Survey of the Development of Mutation Testing}},
+  author={Jia, Yue and Harman, Mark},
+  journal={IEEE Transactions on Software Engineering},
+  year={2010},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/tse.2010.62}
+}
+
+@inproceedings{zhang2016,
+  title={{Predictive mutation testing}},
+  author={Zhang, Jie and Wang, Ziyi and Zhang, Lingming and Hao, Dan and Zang, Lei and Cheng, Shiyang and Zhang, Lu},
+  booktitle={Proceedings of the 25th International Symposium on Software Testing and Analysis},
+  url={http://dx.doi.org/10.1145/2931037.2931038},
+  year={2016},
+  doi={10.1145/2931037.2931038}
+}
+
+@article{pradel2022,
+  title={{Neural software analysis}},
+  author={Pradel, Michael and Chandra, Satish},
+  journal={Communications of the ACM},
+  year={2022},
+  publisher={Association for Computing Machinery (ACM)},
+  doi={10.1145/3460348}
+}
