adding doi to all arcticles

--- a/main.bib
+++ b/main.bib
@@ -13,7 +13,8 @@
   number={4},
   pages={34--41},
   year={1978},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/c-m.1978.218136}
 }
 
 @article{budd1981mutation,
@@ -37,7 +38,8 @@
   number={4},
   pages={371--379},
   year={1982},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.1982.235571}
 }
 
 @article{offutt1994empirical,
@@ -48,7 +50,8 @@
   number={5},
   pages={337--344},
   year={1994},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/32.286422}
 }
 
 @techreport{agrawal1989design,
@@ -66,7 +69,8 @@
   number={3},
   pages={235--253},
   year={1997},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/s0164-1212(96)00154-9}
 }
 
 @book{jones2007,
@@ -84,7 +88,8 @@
   number={4},
   pages={345--361},
   year={1978},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.1978.231521}
 }
 
 @book{brooks1995mythical,
@@ -101,7 +106,8 @@
   number={1},
   pages={4--21},
   year={1984},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.1984.5010193}
 }
 
 @book{boehm2000,
@@ -126,7 +132,8 @@
   number={6},
   pages={639--648},
   year={1983},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.1983.235271}
 }
 
 @book{iso20926foreword,
@@ -165,7 +172,8 @@
   number={1},
   pages={9--36},
   year={1976},
-  publisher={ACM}
+  publisher={ACM},
+  doi={10.1145/320434.320440}
 }
 
 @book{demarco1978,
@@ -183,7 +191,8 @@
   number={5},
   pages={416--429},
   year={1987},
-  publisher={ACM}
+  publisher={ACM},
+  doi={10.1145/22899.22906}
 }
 
 @article{low1990function,
@@ -194,7 +203,8 @@
   number={1},
   pages={64--71},
   year={1990},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/32.44364}
 }
 
 @inproceedings{nagappan2005use,
@@ -222,7 +232,8 @@
   number={2},
   pages={111--117},
   year={1992},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/0164-1212(92)90089-3}
 }
 
 @inproceedings{mohagheghi2004empirical,
@@ -240,6 +251,7 @@
   journal={{IBM Systems Journal}},
   number={3},
   year={1976},
+  doi={10.1147/sj.382.0258}
 }
 
 @misc{ieee982,
@@ -256,6 +268,7 @@
   number={1},
   pages={42--52},
   year={1984},
+  doi={10.1145/69605.2085}
 }
 
 @misc{arguelles2020,
@@ -273,7 +286,8 @@
   number={08},
   pages={37--42},
   year={1979},
-  publisher={IEEE Computer Society}
+  publisher={IEEE Computer Society},
+  doi={10.1109/mc.1979.1658854}
 }
 
 @article{jones1996pragmatics,
@@ -293,7 +307,8 @@
   number={5},
   pages={675--689},
   year={1999},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/32.815326}
 }
 
 @book{jones1991,
@@ -311,7 +326,8 @@
   number={2},
   pages={293--304},
   year={2008},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.2008.90}
 }
 
 @book{mcconnell2004code,
@@ -329,7 +345,8 @@
   number={6},
   pages={45--54},
   year={1990},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/52.60601}
 }
 
 @article{basili1996validation,
@@ -340,7 +357,8 @@
   number={10},
   pages={751--761},
   year={1996},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/32.544352}
 }
 
 @article{chidamber1994metrics,
@@ -351,7 +369,8 @@
   number={6},
   pages={476--493},
   year={1994},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/32.295895}
 }
 
 @article{radjenovic2013software,
@@ -362,7 +381,8 @@
   number={8},
   pages={1397--1418},
   year={2013},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.infsof.2013.02.009}
 }
 
 @article{yu2022predicting,
@@ -372,7 +392,8 @@
   volume={146},
   pages={106847},
   year={2022},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.infsof.2022.106847}
 }
 
 @inproceedings{yamashita2016thresholds,
@@ -453,7 +474,8 @@
   number={3},
   pages={1499--1537},
   year={2019},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1007/s10664-019-09694-w}
 }
 
 @inproceedings{garcia1996maintainability,
@@ -649,7 +671,8 @@
   author={Zhang, Yuxia and Qiu, Zhiqing and Stol, Klaas-Jan and Zhu, Wenhui and Zhu, Jiaxin and Tian, Yingchen and Liu, Hui},
   journal={{IEEE Transactions on Software Engineering}},
   year={2024},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.2024.3364675}
 }
 
 @inproceedings{hindle2008large,
@@ -677,7 +700,8 @@
   number={6},
   pages={367--384},
   year={2004},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online Library},
+  doi={10.1002/smr.301}
 }
 
 @inproceedings{mockus2000identifying,
@@ -704,7 +728,8 @@
   number={4},
   pages={364--370},
   year={1975},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.1975.6312866}
 }
 
 @inproceedings{graves1998inferring,
@@ -763,7 +788,8 @@
   number={1},
   pages={1--74},
   year={2021},
-  publisher={ACM New York, NY}
+  publisher={ACM New York, NY},
+  doi={10.1145/3476105}
 }
 
 @inproceedings{lam2020understanding,
@@ -806,7 +832,8 @@
   number={6},
   pages={53--61},
   year={1997},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/255656.255698}
 }
 
 @inproceedings{vasilescu2015quality,
@@ -866,7 +893,8 @@
   number={12},
   pages={57--63},
   year={2011},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/2043174.2043191}
 }
 
 @misc{bugayenko2014blog0813,
@@ -894,7 +922,8 @@
   volume={24},
   pages={3871--3903},
   year={2019},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1007/s10664-019-09720-x}
 }
 
 @inproceedings{rigby2011understanding,
@@ -913,7 +942,8 @@
   number={1},
   pages={80--88},
   year={1985},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/2465.2469}
 }
 
 @article{harrison1986note,
@@ -924,7 +954,8 @@
   number={2},
   pages={123--125},
   year={1986},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/5657.5660}
 }
 
 @article{marca1981some,
@@ -935,7 +966,8 @@
   number={4},
   pages={70--80},
   year={1981},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/988131.988140}
 }
 
 @article{rees1982automatic,
@@ -946,7 +978,8 @@
   number={10},
   pages={33--42},
   year={1982},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/948086.948088}
 }
 
 @techreport{collberg1997taxonomy,
@@ -1009,7 +1042,8 @@
   number={8},
   pages={863--891},
   year={2018},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.2018.2871058}
 }
 
 @article{chess2004static,
@@ -1020,7 +1054,8 @@
   number={6},
   pages={76--79},
   year={2004},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/msp.2004.111}
 }
 
 @misc{sarif2023,
@@ -1054,7 +1089,8 @@
   number={4},
   pages={308--320},
   year={1976},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/tse.1976.233837}
 }
 
 @inproceedings{campbell2018cognitive,
@@ -1072,7 +1108,8 @@
   volume={197},
   pages={111561},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.jss.2022.111561}
 }
 
 @misc{campbell2017,
@@ -1098,7 +1135,8 @@
   number={2},
   pages={115--139},
   year={1974},
-  publisher={IBM}
+  publisher={IBM},
+  doi={10.1147/sj.132.0115}
 }
 
 @article{henderson1996coupling,
@@ -1147,7 +1185,8 @@
   number={SI},
   pages={259--262},
   year={1995},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/223427.211856}
 }
 
 @inproceedings{curtis1979,
