Adding doi to @books and @misc

--- a/main.bib
+++ b/main.bib
@@ -2,7 +2,8 @@
   title={{Software Sizing and Estimating: Mk II FPA (Function Point Analysis)}},
   author={Symons, Charles R.},
   year={1991},
-  publisher={John Wiley \& Sons, Inc.}
+  publisher={John Wiley \& Sons, Inc.},
+  doi={10.5555/120462}
 }
 
 @article{demillo1978hints,
@@ -28,7 +29,8 @@
   title={Elements of Software Science (Operating and Programming Systems Series)},
   author={Halstead, Maurice H.},
   year={1977},
-  publisher={Elsevier Science Inc.}
+  publisher={Elsevier Science Inc.},
+  doi={10.5555/540137}
 }
 
 @article{howden1982weak,
@@ -78,7 +80,7 @@
   author={Jones, Capers},
   publisher={McGraw-Hill},
   year={2007},
-  edition={2nd},
+  edition={2nd}
 }
 
 @article{putnam1978general,
@@ -114,7 +116,8 @@
   author={Boehm, Barry and Abts, Chris and Brown, Winsor and Chulani, Sunita and Clark, Bradford K. and Horowitz, Ellis and Madachy, Ray and Reifer, Donald J. and Bert, Steece},
   title={{Software Cost Estimation with COCOMO II}},
   publisher={Englewood Cliffs, Prentice-Hall},
-  year={2000}
+  year={2000},
+  doi={10.5555/1795822}
 }
 
 @inproceedings{albrecht1979measuring,
@@ -153,7 +156,8 @@
   title={{Software Sizing, Estimation, and Risk Management: When Performance Is Measured Performance Improves}},
   author={Galorath, Daniel D. and Evans, Michael W.},
   year={2006},
-  publisher={CRC Press}
+  publisher={CRC Press},
+  doi={10.1201/9781420013122}
 }
 
 @book{pressman2005software,
@@ -181,6 +185,7 @@
   author={Tom DeMarco},
   year={1978},
   publisher={Prentice Hall},
+  doi={10.1007/978-3-642-48354-7_9}
 }
 
 @article{kemerer1987empirical,
@@ -258,6 +263,7 @@
   title={{IEEE Std 982.2-1988: Guide for the Use of IEEE Standard Dictionary of Measures to Produce Reliable Software}},
   author={IEEE Standards Board},
   year={1989},
+  doi={10.1109/ieeestd.1989.122630}
 }
 
 @article{basili1984software,
@@ -316,6 +322,7 @@
   author={Jones, Capers},
   publisher={McGraw-Hill},
   year={1991},
+  doi={10.5555/109758}
 }
 
 @article{koru2008investigation,
@@ -334,7 +341,8 @@
   title={{Code Complete}},
   author={McConnell, Steve},
   year={2004},
-  publisher={Pearson Education}
+  publisher={Pearson Education},
+  doi={10.5555/1096143}
 }
 
 @article{cobb1990engineering,
@@ -534,7 +542,8 @@
   title={{The Elements of Programming Style}},
   author={Kernighan, Brian W. and Plauger, Phillip James},
   year={1974},
-  publisher={McGraw-Hill, Inc.}
+  publisher={McGraw-Hill, Inc.},
+  doi={10.5555/601121}
 }
 
 @inproceedings{brooks1978using,
@@ -556,14 +565,16 @@
   title={{Refactoring: Improving the Design of Existing Code}},
   author={Fowler, Martin and Beck, Kent and Brant, John and Opdyke, William and Roberts, Don},
   year={1999},
-  publisher={Addison-Wesley Professional}
+  publisher={Addison-Wesley Professional},
+  doi={10.5555/311424}
 }
 
 @book{hunt1999pragmatic,
   title={The Pragmatic Programmer: From Journeyman to Master},
   author={Hunt, Andrew and Thomas, Dave},
   year={1999},
-  publisher={Pearson Education}
+  publisher={Pearson Education},
+  doi={10.5555/320326}
 }
 
 @book{martin2008clean,
@@ -745,7 +756,8 @@
   title={{Object-Oriented Software Metrics: A Practical Guide}},
   author={Lorenz, Mark and Kidd, Jeff},
   year={1994},
-  publisher={Prentice-Hall, Inc.}
+  publisher={Prentice-Hall, Inc.},
+  doi={10.5555/177063}
 }
 
 @inproceedings{brito1994object,
@@ -821,7 +833,8 @@
   title={{Continuous Delivery: Reliable Software Releases Through Build, Test, and Deployment Automation}},
   author={Humble, Jez and Farley, David},
   year={2010},
-  publisher={Pearson Education}
+  publisher={Pearson Education},
+  doi={10.5555/1869904}
 }
 
 @article{cusumano1997microsoft,
@@ -848,7 +861,8 @@
   title={{Object-Oriented Analysis and Design with Applications}},
   author={Booch, Grady and Maksimchuk, Robert A. and Engle, Michael W. and Young, Bobbi J. and Connallen, Jim and Houston, Kelli A.},
   year={1994},
-  publisher={Addison-Wesley}
+  publisher={Addison-Wesley},
+  doi={10.5555/1407387}
 }
 
 @inproceedings{beck1998extreme,
@@ -1116,7 +1130,8 @@
   title={{\{Cognitive Complexity\} --- a new way of measuring understandability}},
   author={Campbell, G. Ann},
   publisher={Sonar},
-  year={2017}
+  year={2017},
+  doi={10.1145/3194164.3194186}
 }
 
 @inproceedings{chidamber1991towards,
@@ -1152,7 +1167,8 @@
 @book{hitz1995measuring,
   title={{Measuring Coupling and Cohesion in Object-Oriented Systems}},
   author={Hitz, Martin and Montazeri, Behzad},
-  year={1995}
+  year={1995},
+  doi={10.22436/jmcs.09.02.08}
 }
 
 @article{counsell2006interpretation,
@@ -1201,7 +1217,8 @@
   title={{The Mythical Man-Month: Essays on Software Engineering}},
   author={Brooks, Fred},
   year={1982},
-  publisher={Addison-Wesley Publishing Company}
+  publisher={Addison-Wesley Publishing Company},
+  doi={10.1002/spe.4380060417}
 }
 
 @inproceedings{cunningham1992,
@@ -1304,14 +1321,16 @@
   title={{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design}},
   author={Yourdon, Edward and Constantine, Larry},
   year={1979},
-  publisher={Prentice Hall}
+  publisher={Prentice Hall},
+  doi={10.5555/578522}
 }
 
 @book{martin2002,
   title={{Agile Software Development, Principles, Patterns, and Practices}},
   author={Martin, Robert C.},
   year={2002},
-  publisher={ACM Digital Library}
+  publisher={ACM Digital Library},
+  doi={10.5555/515230}
 }
 
 @article{ain2019,
@@ -1462,7 +1481,8 @@
   title={{Black Box Testing}},
   author={Beizer, Boris},
   year={1995},
-  publisher={ACM Digital Library}
+  publisher={ACM Digital Library},
+  doi={10.5555/202699}
 }
 
 @inproceedings{marick1997,
@@ -1545,7 +1565,8 @@
   title={{Introduction to Software Testing}},
   author={Ammann, Paul and Offutt, Jeff},
   year={2008},
-  publisher={Cambridge University Press}
+  publisher={Cambridge University Press},
+  doi={10.5555/1355340}
 }
 
 @article{jia2009,
